hphp/hack/test/error_formatting/big_file.php.exp
error: Typing[4030] Was expecting a return type hint
   --> big_file.php
1008 | function bar() {
     |          ^^^

error: Typing[4105] Too many positional arguments (expected 0 but got 1)
   --> big_file.php
   3 | function foo(): void {}
     |          ^^^ Definition is here
1009 |   foo(1);
     |   ^^^^^^

2 errors found
