hphp/hack/test/error_formatting/big_file.php
<?hh // strict

function foo(): void {}

/* A very long comment to push us over 1,000 lines.








































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































*/

function bar() {
  foo(1);
}
